# quixotic-learning

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  autodiff  autodiff-xor-test.cpp  autodiff.cpp  fast_autodiff.cpp  fast_autodiff.cu  fast_autodiff.h  ffnn-fast_autodiff.cpp  fnn-autodiff.cpp  mnistdata.cpp  mnistdata.h  test_fast_autodiff.cpp  test_fast_autodiff.cu  train.cpp  xor_train.tsv
ffnn-autodiff/: Makefile
ffnn-bare/: train.cpp
ffnn-fast-autodiff-cpu/: .gitignore  fast_autodiff.h  ffnn-fast_autodiff.cpp
ffnn-fast-autodiff-gpu/: .gitignore  CMakeLists.txt  Makefile  fast_autodiff.cu  fast_autodiff.h  ffnn-fast_autodiff.cpp  ffnn-fast_autodiff.cu  lenet.cu  mnistdata.cpp  mnistdata.h  test_fast_autodiff.cu
ffnn-fast-autodiff-gpu/fast_autodiff/: CMakeLists.txt  fast_autodiff.cu  fast_autodiff.h
ffnn-fast-autodiff-gpu/ffnn/: ffnn-fast_autodiff.cu  ffnn.cu
ffnn-fast-autodiff-gpu/lenet/: lenet.cu
ffnn-fast-autodiff-gpu/mnistdata/: CMakeLists.txt  mnistdata.h
ffnn-fast-autodiff-gpu/silly_autodiff/: CMakeLists.txt  silly_autodiff.h
ffnn-fast-autodiff-gpu/tests/: fast_autodiff.test.cu  silly_autodiff.test.cu
lenet/: lenet.cu
mnistdata/: mnistdata.cpp
old-stuff/ffnn-autodiff/: .gitignore  autodiff-xor-test.cpp  autodiff.cpp  fnn-autodiff.cpp  mnistdata.cpp
old-stuff/ffnn-bare/: .gitignore  Makefile
old-stuff/ffnn-fast-autodiff-cpu/: Makefile  ffnn-fast_autodiff.cpp  mnistdata.cpp  mnistdata.h
silly_autodiff/: silly_autodiff.cu  silly_autodiff.h
